# VIETTEL_AI_RACE

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
VLLM/: dowloads_models.py  downloads_models.py  main.py
config/: settings.py
